About to submit

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Craigslist, but better</title>
+  <title>Craigslist</title>
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="assets/css/basics.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
   <link rel="shortcut icon" href="assets/img/tab-icon.ico">
 </head>
 <body>
@@ -45,7 +49,7 @@
     <div class="overlay">
       <div class="splash-text-container">
         <div class="splash-title">Welcome.</div>
-        <div class="splash-subtitle">Discover treasures in your area with Craigslist.</div>
+        <div class="splash-subtitle"><!-- <p class="css-typing"> -->Discover treasures in your area with Craigslist.<!-- </p> --></div>
       </div>
     </div>
   </div>
