--- a/item.html
+++ b/item.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Craigslist, but better</title>
+  <title>Craigslist</title>
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="assets/css/basics.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
   <link rel="shortcut icon" href="assets/img/tab-icon.ico">
 </head>
 <body>
@@ -142,7 +146,7 @@
       pool leads to china
     </div>
     <div class = "tag-item">
-      complementary maids and butlers
+      complimentary maids and butlers
     </div>
     <div class = "tag-item">
       trees may grow money
