Added link to list.html from search button

--- a/item.html
+++ b/item.html
@@ -29,7 +29,7 @@
       </select>
     </div>   
     <input type="text" placeholder="I'm looking for..." id="search-field" />
-    <input type="submit" value="Search" class="button" id="search-button" />
+    <a href="list.html"><input type="submit" value="Search" class="button" id="search-button" /></a>
   </div>
   <div id="account-info">
     <div class="button" id="post-button">Post to Craigslist</div>
