--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- SEXY SPLASH PAGE -->
   <div class="splash-container">
     <div class="splash" id="golden-gate-splash">
-      <img src="assets/img/golden-gate.jpeg" class="img-scaled-wh">
+      <img src="https://unsplash.imgix.net/photo-1414005987108-a6d06de8769f?q=75&fm=jpg&s=b37798a9dbd0c8884af2261b518970e3" class="img-scaled-wh">
     </div>
     <div class="overlay">
       <div class="splash-text-container">
